[tool.poetry]
name = "covid19-sir"
version = "0.1.0"
description = "SIR Model for COVID-19 Cases"
authors = ["Lewuathe <lewuathe@me.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
pandas = "*"
matplotlib = "*"
jupyterlab = "*"
scipy = "*"
bleach = ">=3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
